<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomDock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomDock"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:background="@drawable/bg_bottom_dock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNav"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            app:itemIconSize="28dp"
            app:itemRippleColor="@color/chip_bg"
            app:labelVisibilityMode="labeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/playerDockControls"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/bottom_nav" />

        <LinearLayout
            android:id="@+id/playerDockControls"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/bottomNav"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/dockBtnMode"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/mode_order"
                android:padding="10dp"
                android:src="@drawable/ic_mode_order"
                app:tint="#F0FFFFFF" />

            <ImageButton
                android:id="@+id/dockBtnPrev"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_marginStart="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/prev"
                android:padding="11dp"
                android:src="@drawable/ic_skip_previous"
                app:tint="#F0FFFFFF" />

            <ImageButton
                android:id="@+id/dockBtnPlayPause"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_play_button"
                android:contentDescription="@string/play"
                android:padding="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_play"
                app:tint="@color/player_button_icon" />

            <ImageButton
                android:id="@+id/dockBtnNext"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/next"
                android:padding="11dp"
                android:src="@drawable/ic_skip_next"
                app:tint="#F0FFFFFF" />

            <ImageButton
                android:id="@+id/dockBtnLyrics"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/tap_toggle_lyrics"
                android:padding="10dp"
                android:src="@drawable/ic_lyrics"
                app:tint="#F0FFFFFF" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
